# flask-docker-test

./: local.Dockerfile  pyproject.toml  run.py
app/: app.py
settings/local/: config.py  local-compose.yml
