[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Dima", email = "1988maksyutenko@gmail.com"},
]
dependencies = [
    "flask==2.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
